2003-08-23  Jason Eckhardt  <jle@rice.edu>

	* coff/i860.h (COFF860_R_PAIR, COFF860_R_LOW0, COFF860_R_LOW1,
	COFF860_R_LOW2, COFF860_R_LOW3, COFF860_R_LOW4, COFF860_R_SPLIT0,
	COFF860_R_SPLIT1, COFF860_R_SPLIT2, COFF860_R_HIGHADJ,
	COFF860_R_BRADDR): Define new relocation constants and document.
	Minor formatting adjustments.

2003-08-07  Alan Modra  <amodra@bigpond.net.au>

	* ti.h (GET_SCNHDR_NRELOC): Rename PTR param to LOC.
	(PUT_SCNHDR_NRELOC, GET_SCNHDR_NLNNO, PUT_SCNHDR_NLNNO): Likewise.
	(GET_SCNHDR_FLAGS, PUT_SCNHDR_FLAGS): Likewise.
	(GET_SCNHDR_PAGE, PUT_SCNHDR_PAGE): Likewise.

2003-07-17  Jeff Muizelaar  <muizelaar@rogers.com>

	* pe.h: (IMAGE_FILE_NET_RUN_FROM_SWAP): Define.
	(IMAGE_FILE_MACHINE_WCEMIPSV2): Define.
	(IMAGE_FILE_MACHINE_SH3DSP): Define.
	(IMAGE_FILE_MACHINE_SH3E): Define.
	(IMAGE_FILE_MACHINE_SH5): Define.
	(IMAGE_FILE_MACHINE_AM33): Define.
	(IMAGE_FILE_MACHINE_POWERPCFP): Define.
	(IMAGE_FILE_MACHINE_AXP64): Define.
	(IMAGE_FILE_MACHINE_TRICORE): Define.
	(IMAGE_FILE_MACHINE_CEF): Define.
	(IMAGE_FILE_MACHINE_EBC): Define.
	(IMAGE_FILE_MACHINE_AMD64): Define.
	(IMAGE_FILE_MACHINE_M32R): Define.
	(IMAGE_FILE_MACHINE_CEE): Define.

2003-07-14  Christian Groessler  <chris@groessler.org>

        * i860.h (AOUTSZ): Define for i860 coff.

2003-06-29  Andreas Jaeger  <aj@suse.de>

	* xcoff.h (struct __rtinit ): Convert to ISO C90 prototypes.

	* ecoff.h: Convert to ISO C90 prototypes.  Replace PTR by void *.

2003-04-24 Dhananjay Deshpande <dhananjayd@kpitcummins.com>

	* coff/h8300.h (H8300HNMAGIC, H8300SNMAGIC): New.
	(H8300HNBADMAG, H8300SNBADMAG): New.

2003-04-15  Rohit Kumar Srivastava <rohits@kpitcummins.com>

	* sh.h: Replace occurrances of 'Hitachi' with 'Renesas'.
	* h8300.h: Likewise.
	* h8500.h: Likewise.

2003-03-25  Stan Cox   <scox@redhat.com>
	    Nick Clifton  <nickc@redhat.com>

	Contribute support for Intel's iWMMXt chip - an	ARM variant:

	* arm.h (ARM_NOTE_SECTION): Define.
